# mobile-dev-studio

./: .codecov.yml  .detoxrc.js  .eslintrc.js  .gitignore  App.tsx  CLAUDE.md  LICENSE  README.md  app.json  babel.config.js  detox.config.js  detox.setup.js  gradle.properties  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json  validation-report-debug.md  validation-report-release.md  validation-report.md
.husky/: pre-commit
android/: build.gradle  settings.gradle
apk-validation-debug-report/: validation-report-debug.md
apk-validation-release-report/: validation-report-release.md
dist-android/: metadata.json
docker/: Dockerfile.expo-test  docker-compose.test.yml
docs/: BUILD_AND_RELEASE.md
e2e/: init.js  jest.config.js
manifest-debug-124/: build-manifest-debug.json
manifest-debug-319/: build-manifest-debug.json
manifest-release-319/: build-manifest-release.json
modules/termux-core/android/: CMakeLists.txt  build.gradle
modules/termux-core/android/src/main/cpp/: termux-core.cpp
modules/termux-core/android/src/main/java/expo/modules/termuxcore/: TermuxCoreModule.kt  TermuxSession.kt  TermuxTerminalViewManager.kt  TermuxTerminalViewManager.kt.broken
modules/termux-core/android/src/main/java/expo/modules/termuxcore/view/: TerminalView.java
scripts/: check-build-status.sh  download-apk-validation-results.sh  download-test-results.sh  kotlin-lint-local.sh  monitor-test-completion.sh  monitor-test-progress.sh  quick-debug.sh  setup-e2e.sh  setup-signing.sh  test-local.js  test-termux-integration.js  (+4 more)
(+95 files in other folders)
